# UniRL

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  INSTALL.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.cursor/rules/: code-agent-guidelines.mdc
.github/: pull_request_template.md
.github/workflows/: auto-format.yml  lint.yml  pr-body.yml  pr-status-labels.yml  semantic-pull-request.yml
CPPO/: README.md  config.yaml
DRPO/: README.md  config.yaml
FlowDPPO/: README.md  config.yaml
benchmarks/: README.md  __init__.py  run.py
benchmarks/core/: __init__.py  checkpoints.py  generate.py  registry.py  report.py  score.py
benchmarks/speed_benchmarks/: README.md  parse_perf.py
datasets/pickscore/: prpocess.py
examples/: README.md  mooncake_master.sh  run_experiment_multinode_taiji.sh  run_experiment_single_node.sh
examples/ar/: bagel_grpo_arxivqa_mc_2x8_lora.yaml  qwen3_cppo_30b_a3b_base_dapo_sglang.yaml  qwen3_dppo_4b_base_dapo_sglang.yaml  qwen3_drgrpo_4b_base_dapo_sglang.yaml  qwen3_drpo_4b_base_dapo_sglang.yaml  qwen3_drpo_4b_base_dapo_sglang_async.yaml  qwen3_drpo_4b_base_dpao_sglang.yaml  qwen3_grpo_4b_base_dapo_sglang.yaml  qwen3_grpo_4b_base_dapo_sglang_async.yaml  qwen3_grpo_4b_base_dpao_sglang.yaml  qwen3_grpo_vanilla_4b_base_dapo_sglang.yaml  qwen_vl_grpo_geo3k_mc_4x8.yaml  qwen_vl_grpo_geo3k_mc_4x8_lora.yaml  qwen_vl_grpo_geo3k_mc_sglang_4x8.yaml  qwen_vl_grpo_geo3k_mc_sglang_4x8_lora.yaml
examples/diffusion/: flux2_klein_sglang.yaml  flux2_klein_trainside.yaml  hunyuan_video15_t2v_dancegrpo_trainside.yaml  hunyuan_video15_t2v_vllmomni_colocate.yaml  hunyuan_video15_t2v_vllmomni_nccl_separate.yaml  hunyuan_video_t2v_trainside.yaml  qwen_image_dancegrpo.yaml  qwen_image_dancegrpo_vllmomni.yaml  qwen_image_grpo_vllmomni.yaml  qwen_image_mixgrpo.yaml  qwen_image_nft.yaml  qwen_image_sglang.yaml  qwen_image_trainside.yaml  refl_sd3.yaml  sd3_dancegrpo.yaml  sd3_flowdppo.yaml  sd3_flowdppo_vllmomni.yaml  sd3_mixgrpo.yaml  sd3_nft.yaml  sd3_nft_reward_service.yaml  sd3_nft_sglang.yaml  sd3_sglang_full_nccl_separate.yaml  sd3_sglang_full_tensor.yaml  sd3_sglang_lora_separate.yaml  sd3_sglang_replay_colocate.yaml  sd3_sglang_rollout_colocate.yaml  sd3_trainside.yaml  sd3_trainside_tq_mooncake.yaml  sd3_vllmomni.yaml  sd3_vllmomni_full_ipc.yaml  sd3_vllmomni_full_nccl_separate.yaml  sd3_vllmomni_full_tensor.yaml  sd3_vllmomni_lora_separate.yaml  wan21_i2v.yaml  wan21_t2v.yaml  wan21_t2v_dancegrpo.yaml  wan21_t2v_mixgrpo.yaml  wan21_t2v_videoalign_dancegrpo.yaml  wan22_i2v.yaml  wan22_t2v_14b.yaml  (+2 more)
examples/pe/: pe_sglang_full_pickscore.yaml  pe_sglang_full_wise.yaml  pe_sglang_lora_pickscore.yaml  pe_trainside_pickscore.yaml  pe_trainside_pickscore_frozenllm.yaml  pe_trainside_pickscore_frozenllm_promptgroup.yaml
examples/sft/: bagel_sft.yaml  qwen3_sft.yaml  qwen_vl_sft.yaml  sd3_sft.yaml
examples/unified_model/: bagel_trainside_unigrpo.yaml  hi3_vllmomni.yaml  hi3_vllmomni_veomni_ep.yaml
scripts/: check_recipe_targets.py
unirl/: README.md  __init__.py  train_ar.py  train_async_ar.py  train_diffusion.py  train_pe.py  train_refl.py  train_sft.py  train_unified_model.py
unirl-reward-service/: .gitignore  CHANGELOG.md  README.md  install.sh  pyproject.toml
unirl-reward-service/.claude/skills/code-standards/: SKILL.md
unirl-reward-service/configs/: service.cluster.example.yaml  service.example.yaml
unirl-reward-service/datasets/geneval2/: geneval2_data.jsonl
unirl-reward-service/docs/: ARCHITECTURE.md  DEVELOPMENT_LOG.md  RESUME_PROMPT.md
unirl-reward-service/envs/: clip.txt  geneval.txt  geneval2.txt  hpsv2.txt  hpsv3.txt  imagereward.txt  ocr.txt  pickscore.txt  unified_reward.txt  videoalign.txt  wise.txt
unirl-reward-service/reward_service/: __init__.py  __main__.py  client.py  config.py  logging_utils.py  schemas.py  server.py
unirl-reward-service/reward_service/scorers/: __init__.py  _common.py  base.py  clip.py  geneval.py  geneval2.py  hpsv2_scorer.py  hpsv3_scorer.py  imagereward.py  ocr.py  ocr_common.py  pickscore.py  registry.py  unified_reward.py  videoalign.py  wise.py
unirl-reward-service/reward_service/scorers/_videoalign/: README.md  __init__.py  builder.py  checkpoint.py  configs.py  inferencer.py  model.py  prompt_template.py  vision_process.py
unirl-reward-service/reward_service/workers/: __init__.py  actor.py  group.py  pool.py
unirl-reward-service/scripts/: _ray_lib.sh  bench_concurrent.py  check_venvs.py  ray_smoke.sh  ray_start.sh  ray_stop.sh  remote_client_example.py  remote_client_zero_deps.py  smoke_client.py  start_videoalign.sh  stop_videoalign.sh  test_videoalign.py  wait_ready.sh
unirl/algorithms/: README.md  __init__.py  base.py  cppo.py  diffusionnft.py  dppo.py  drpo.py  flowdppo.py  flowgrpo.py  grpo.py  gspo.py  normalizers.py  sft.py
unirl/config/: README.md  __init__.py  require.py  validation.py
unirl/data/: __init__.py  data_source.py  datasets.py  sft.py
unirl/distributed/: README.md  __init__.py  utils.py
unirl/models/: README.md  __init__.py  draft.py
unirl/reward/: README.md  __init__.py  base.py  remote.py  service.py
unirl/rollout/: README.md  __init__.py  async_runtime.py
unirl/sde/: README.md  __init__.py  kernels.py  noise.py  rules.py  runtime.py
unirl/tools/: __init__.py  _checkpoint.py  export_adapter.py  export_full.py  export_hf.py
unirl/train/: configs.py  ema.py  factories.py  fsdp_utils.py  inject.py  lora.py  optim.py  readme.md  shadow.py  stack.py  unified_model_stack.py
unirl/trainer/: README.md  ar.py  async_ar.py  base.py  diffusion.py  eval_suites.py  pe.py  refl.py  sft.py  unified_model.py
unirl/types/: __init__.py  batch_ops.py  media.py  media_preview.py  noise_recipe.py  primitives.py  prompts.py  reward.py  rollout_req.py  rollout_resp.py  sampling.py  trajectory_store.py
unirl/utils/: __init__.py  adapter_utils.py  distributed_utils.py  dtypes.py  hydra.py  media.py  misc.py  peft_merge.py  prepare_arxivqa_mc.py  prepare_dapo_math.py  prepare_geo3k_mc.py  prepare_sft_t2i.py  prepare_sft_text.py  timing.py  (+5 more)
(+460 files in other folders)
